--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,6 +24,14 @@
       "program": "${workspaceFolder}/src/3-add-two-numbers-using-pydantic.py",
       "args": [],
       "justMyCode": true
+    },
+    {
+      "name": "4-using-db-inside-task",
+      "type": "debugpy",
+      "request": "launch",
+      "program": "${workspaceFolder}/src/4-using-db-inside-task.py",
+      "args": [],
+      "justMyCode": true
     }
   ]
 }
